# lm-resizer

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.fr.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: custom-filter.yml  provider-fixture.yml
.github/workflows/: ci.yml  pages.yml  publish-wasm.yml
crates/lm-resizer-core/: Cargo.toml
crates/lm-resizer-core/benches/: auth_mode.rs  ccr_store.rs  tokenizer.rs
crates/lm-resizer-core/config/: pipeline.toml
crates/lm-resizer-core/src/: auth_mode.rs  cache_control.rs  lib.rs  monotonic.rs
crates/lm-resizer-core/src/ccr/: mod.rs
crates/lm-resizer-core/src/ccr/backends/: in_memory.rs  mod.rs
crates/lm-resizer-core/src/relevance/: base.rs  bm25.rs  embedding.rs  hybrid.rs  mod.rs
crates/lm-resizer-core/src/signals/: README.md  keyword_detector.rs  mod.rs
crates/lm-resizer-core/src/tokenizer/: estimator.rs  hf_impl.rs  mod.rs  registry.rs  tiktoken_impl.rs
crates/lm-resizer-core/src/transforms/: adaptive_sizer.rs  anchor_selector.rs  content_detector.rs  detection.rs  diff_compressor.rs  live_zone.rs  log_compressor.rs  magika_detector.rs  magika_onnx.rs  mod.rs  recommendations.rs  search_compressor.rs  source_compressor.rs  tag_protector.rs
crates/lm-resizer-core/src/transforms/pipeline/: config.rs  orchestrator.rs
crates/lm-resizer-core/src/transforms/pipeline/offloads/: json_offload.rs
crates/lm-resizer-core/src/transforms/smart_crusher/: builder.rs  config.rs  crusher.rs  crushers.rs  error_keywords.rs  mod.rs  observer.rs  outliers.rs
crates/lm-resizer-core/src/transforms/smart_crusher/compaction/: compactor.rs
crates/lm-resizer-core/tests/: auth_mode.rs  cache_control.rs  ccr_backends.rs  ccr_roundtrip.rs  live_zone_ccr.rs  live_zone_dispatch.rs  live_zone_thresholds.rs  live_zone_token_validation.rs  recommendations_loader.rs  retention.rs  tokenizer_proptest.rs
crates/lm-resizer-wasm/: Cargo.toml
crates/lm-resizer-wasm/src/: lib.rs
docs/: ABI.md  API.md  CLAUDE_CODEX.md  PORTING.md  RELEASE.md  SOCIAL_POSTS.md  index.html
examples/: basic.rs  persistent_store.rs
fixtures/provider-cache/: anthropic-messages.json  bedrock-anthropic.json  openai-chat.json  vertex-gemini.json
include/: lm_resizer.h
scripts/: build-wasm.ps1  build-wasm.sh  check-publish-readiness.ps1  check-publish-readiness.sh  check-release.ps1  check-release.sh  check-wasm-package.ps1  check-wasm-package.sh  generate-checksums.ps1  generate-checksums.sh  package-release.ps1  package-release.sh  package-wasm.ps1  package-wasm.sh  publish-wasm.ps1  publish-wasm.sh  release-evidence.ps1  release-evidence.sh  sign-windows-release.ps1  smoke-proxy-preview.ps1  smoke-proxy-preview.sh
src/: main.rs
