[workspace]
resolver = "2"
members = [
  ".",
  "crates/lm-resizer-core",
  "crates/lm-resizer-wasm",
]

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/phuetz/lm-resizer"
authors = ["lm-resizer contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "arbitrary_precision", "raw_value"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs", "io-std", "io-util"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

[package]
name = "lm-resizer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Rust-native context compression layer for LLM agents."

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = "0.22"
clap = { workspace = true }
flate2 = "1"
futures-util = "0.3"
lm-resizer-core = { path = "crates/lm-resizer-core" }
rayon = "1"
reqwest = { workspace = true }
regex = "1"
ring = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
tokio = { workspace = true }
tokio-tungstenite = "0.24"
toml = "0.8"
walkdir = "2"
