[package]
name = "lm-resizer-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core lm-resizer compression transforms and CCR storage."

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `tiktoken-rs` + `tokenizers` (token counting) are native-only: they are only
# reached via the `tokenizer` module and the live-zone dispatcher, neither of
# which is on the wasm `compress` path. Declared in the wasm32-excluded table
# below so the crate builds for `wasm32-unknown-unknown` (onig/oniguruma is C).
# `md5` for the CCR cache_key. Python's compression_store hashes the original
# diff with MD5 truncated to 24 hex chars; we must match byte-for-byte.
md-5 = "0.10"
# `sha2` for `_hash_field_name` in smart_crusher (SHA256 truncated to 16
# hex chars). Python uses `hashlib.sha256` so we need byte-exact parity.
sha2 = "0.10"
# `dashmap` for the CCR storage backend. Concurrent HashMap with sharded
# locking — distinct keys hashed to different shards never contend, so
# multi-worker proxy load doesn't queue on a single Mutex. Lock-free
# reads inside each shard via RwLock semantics.
dashmap = "6"
# `regex` is already a transitive dep of tokenizers; depend on it directly so
# our hunk-header parser and priority-pattern matcher have a stable surface.
regex = "1"
# `flate2` for `_validate_with_zlib` in `adaptive_sizer`. Python's adaptive
# sizing pipeline uses `zlib.compress(..., level=1)` to validate the chosen
# K against compression-ratio diversity. We use the default `miniz_oxide`
# backend (pure Rust) which produces DEFLATE output of similar length to
# CPython's libz at level=1 for typical inputs. The check only triggers on
# >15% ratio divergence so small per-byte differences don't change the
# outcome — but if a parity fixture flakes here, swap to
# `features = ["zlib"]` to link against system libz for byte-equal output.
flate2 = "1"
# `unidiff` is the Stage-3d Tier-2 diff detector. We use the parser
# itself as the "is this a diff?" oracle — anything that successfully
# parses to ≥1 PatchedFile is a diff. The deterministic parser
# catches naked hunks without `diff --git`
# headers, prose-prefixed diffs, truncated outputs). Default features
# bring `encoding_rs` for non-UTF8 sniffing — we keep them on for
# compatibility with arbitrary tool outputs.
unidiff = "0.4"
# `aho-corasick` powers the Tier-3 KeywordDetector in `signals/`.
# A single deterministic-finite-automaton scan finds every keyword
# in a line in O(n + m) — orders of magnitude faster than running N
# regex .search() calls and harder to misuse. Word-boundary checks
# happen as a post-filter on the byte offsets the automaton returns.
# Default features (std, perf-literal) keep the build small.
aho-corasick = "1"
# `rayon` powers the pipeline orchestrator's parallel reformat-vs-bloat
# evaluation. It is native-only (no threads on `wasm32-unknown-unknown`);
# the orchestrator falls back to a serial path under `cfg(target_arch =
# "wasm32")` (same result, no parallelism). Declared in the native table below.
# `toml` reads the default pipeline configuration shipped at
# `config/pipeline.toml`. The defaults embed via `include_str!` so a
# stock binary needs no external file; production deployments override
# by loading their own TOML at startup.
toml = "0.8"
# `blake3` powers `ccr::compute_key`. BLAKE3 is faster than SHA-256 on
# every hot path the proxy hits (large diff/log/tool_result payloads)
# and produces collision-resistant 24-char prefixes for the CCR
# `<<ccr:HASH>>` marker. Pinning the algorithm + truncation length here
# keeps Rust and Python in lockstep — Python parses the same 24-char
# hex via `lm-resizer/ccr/tool_injection.py` regex. Pure-Rust by default,
# no system dep, no SIMD-feature-gated flag (the crate auto-detects).
blake3 = "1"
# `rusqlite` (bundled SQLite) backs the production CCR store. It compiles C
# and cannot target `wasm32-unknown-unknown`, so it lives in the native-only
# table below; the wasm build uses the in-memory CCR store exclusively.
# `redis` for the optional multi-worker CCR backend. Cfg-gated behind
# the `redis` feature so deploys that don't need it pay no compile
# cost. Default features include the sync `Connection` API used in
# `ccr/backends/redis.rs`; `tokio-comp` would pull `tokio` into the
# core crate, which we do not want.
redis = { version = "0.27", optional = true, default-features = false }
# `http` powers the auth-mode classifier (Phase F PR-F1). The proxy
# crate already depends on this — pulling it into core lets the
# classifier live with the other Phase B/F policy primitives without
# cycling through the proxy crate. Tiny crate (no I/O, just types).
http = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `hf-hub` is the HuggingFace Hub client. It is native-only: the WASM ABI ships
# the local compression surface and can still load tokenizer JSON bytes/files,
# but it does not perform Hub downloads from the module.
hf-hub = { version = "0.4", default-features = false, features = ["ureq", "rustls-tls"] }
# Native-only deps (excluded from wasm32 builds — see notes in `[dependencies]`).
rayon = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tiktoken-rs = "0.11"
# `tokenizers` default features pull in `onig` (vendors oniguruma, builds
# without a system dep on macOS/Linux); C, so native-only.
tokenizers = "0.22"
# Optional ONNX content detection (feature `magika`). Google's official crate
# bundles the `standard_v3_3` model; `ort` is its inference runtime, pinned to
# the exact version `magika` requires. ONNX = native-only.
magika = { version = "1.1.0", optional = true }
ort = { version = "=2.0.0-rc.12", optional = true }

[features]
default = []
# Real ONNX content detection via Google's official `magika` crate (bundled
# `standard_v3_3` model). Off by default to keep the base build light and
# dependency-free of the ONNX runtime. When compiled in, detection still
# requires `LM_RESIZER_ENABLE_MAGIKA=1` at runtime; otherwise the deterministic
# detector is used. Native-only (no ONNX runtime on wasm32).
magika = ["dep:magika", "dep:ort", "ort/download-binaries"]
# Compile in the Redis CCR backend. Enable for multi-worker deployments
# that want a shared CCR store with no sticky-session at the LB. The
# SQLite backend (always compiled) is the production default for
# single-worker / single-instance setups.
redis = ["dep:redis"]

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "tokenizer"
harness = false

[[bench]]
name = "ccr_store"
harness = false

[[bench]]
name = "auth_mode"
harness = false
