[package]
name = "lm-resizer-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal WASM ABI for lm-resizer JavaScript hosts."

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = { workspace = true }
